--- a/src/templates/reset_password/reset.html.twig
+++ b/src/templates/reset_password/reset.html.twig
@@ -8,7 +8,8 @@
     <div class="animate form login_form">
         <section class="login_content" style="font-size: 16px">
             {{ form_start(resetForm) }}
-            <h1>Delko RH</h1>
+                <h1>Delko RH</h1>
+                <h1>Choisissez un mot de passe</h1>
                 {{ form_row(resetForm.plainPassword) }}
                 <button class="btn btn-primary">Enregistrer</button>
             {{ form_end(resetForm) }}
