--- a/src/templates/salarie/salarie.html.twig
+++ b/src/templates/salarie/salarie.html.twig
@@ -71,7 +71,7 @@
                                         </td>
                                         <td style="text-align:center">
                                             {% if salarie.roles[0] == 'ROLE_RESPONSABLE_RH' %}
-                                                <a href="" class="btn btn-danger disable-btn" onclick="alert('Vous ne pouvez pas vous supprimer vous même ! :D'); return false;">
+                                                <a href="" class="btn btn-danger disable-btn" onclick="alert('Vous ne pouvez pas vous supprimer vous même !'); return false;">
                                                     <i class="fa fa-trash"></i>
                                                 </a>
                                             {% else %}
