+contraintes sécurité mots de passe(min 6 car, 1 lettre & 1 chiffre)

--- a/src/templates/admin/main.html.twig
+++ b/src/templates/admin/main.html.twig
@@ -6,7 +6,8 @@
     <div style="border-top: 1px solid #a1a1a1;" class="ln_solid"></div>
     <div style="font-size: 20px">
         <h2> <strong> Statistiques : </strong> </h2>
-        Il y a actuellement {{ services | length }} services et {{ salaries | length }} salariés enregistrés.
+        Il y a actuellement {{ services | length }} services et {{ salaries | length }} salariés enregistrés. <br/>
+        <a href="{{ calendarlink }}">calendrier</a>
     </div>
 </div>
 {% endblock %}
