--- a/src/templates/conges/conges.html.twig
+++ b/src/templates/conges/conges.html.twig
@@ -30,7 +30,7 @@
                         <div class="row">
                             <table id="example" class="display table table-striped table-bordered dataminetables">
                                 <thead style="text-align:center">
-                                <th>éffectuée le :</th>
+                                <th>éffectuée le</th>
                                 <th>Nature</th>
                                 <th>Dates</th>
                                 <th>État</th>
