--- a/src/templates/conges/demande_conges.html.twig
+++ b/src/templates/conges/demande_conges.html.twig
@@ -10,7 +10,7 @@
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h5>{#<a href="{{ path('app_salarie') }}"> Liste des salariés </a> >>#} Nouvelle demande de congés </h5>
+                <h5> Nouvelle demande de congés </h5>
             </div>
         </div>
 
