--- a/src/templates/reset_password/reset.html.twig
+++ b/src/templates/reset_password/reset.html.twig
@@ -17,7 +17,7 @@
         <div class="separator" style="display: flex; flex-direction: column; align-items: center;">
             <div class="clearfix"></div>
             <br/>
-            <img style="width: 36%" src="{{ asset('build/images/Logo-delko.png') }}" alt="logo delko">
+            <img style="width: 36%" src="{{ asset('build/images/logo-delko.png') }}" alt="logo delko">
         </div>
     </div>
 </div>
