--- a/src/templates/admin/bars.html.twig
+++ b/src/templates/admin/bars.html.twig
@@ -60,14 +60,11 @@
     <!-- top navigation -->
     <div class="top_nav">
         <div class="nav_menu">
-{#            <div class="nav toggle">#}
-{#                <a id="menu_toggle"><i class="fa fa-bars"></i></a>#}
-{#            </div>#}
             <nav class="nav navbar-nav">
                 <ul class=" navbar-right">
                     <li class="nav-item dropdown open" style="padding-left: 15px;">
                         <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
-                            {{ app.user.prenom }} {{ app.user.nom }}
+                            <i class="fa fa-user"></i> {{ app.user.prenom }} {{ app.user.nom }}
                         </a>
                         <div class="dropdown-menu dropdown-usermenu pull-right" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item"  href="{{ path('app_salarie_changepswd') }}"><i class="fa fa-key pull-right"></i>Changer mon mot de passe</a>
