--- a/src/templates/admin/bars.html.twig
+++ b/src/templates/admin/bars.html.twig
@@ -23,7 +23,7 @@
             <div id="sidebar-menu" class="main_menu_side hidden-print main_menu ">
                 <div class="menu_section">
                     <ul class="nav side-menu">
-                        <li><a href="{{ path('app_home') }}"><i class="fa fa-home"></i> Accueil </a>
+                        <li><a href="{{ path('app_home') }}"><i class="fa fa-home"></i> Accueil & Calendrier </a>
                         </li>
                         {% if is_granted("ROLE_SALARIE") %}
                             <li><a><i class="fa fa-plane"></i> Congés <span class="fa fa-chevron-down"></span></a>
@@ -64,7 +64,7 @@
                 <ul class=" navbar-right">
                     <li class="nav-item dropdown open" style="padding-left: 15px;">
                         <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
-                            <i class="fa fa-user"></i> {{ app.user.prenom }} {{ app.user.nom }}
+                            <i class="fa fa-user"></i> Mon compte
                         </a>
                         <div class="dropdown-menu dropdown-usermenu pull-right" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item"  href="{{ path('app_salarie_changepswd') }}"><i class="fa fa-key pull-right"></i>Changer mon mot de passe</a>
@@ -80,20 +80,20 @@
     <!-- page content -->
     <div class="right_col" role="main">
         {% for message in app.flashes("error") %}
-            <div style="font-size: 15px; display: flex; flex-direction: column" class="alert alert-danger alert-dismissible " role="alert">
+            <div style="font-size: 20px" class="alert alert-danger alert-dismissible " role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-                <strong>Erreur :</strong>
-                {{ message }}
+                <strong>Erreur :</strong> {{ message }}
             </div>
         {% endfor %}
         {% for message in app.flashes("success") %}
-            <div style="font-size: 15px; display: flex; flex-direction: column" class="alert alert-success alert-dismissible " role="alert">
+            <div style="font-size: 20px" class="alert alert-success alert-dismissible " role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-                <strong>Succès :</strong>
-                {{ message }}
+                <strong>Succès :</strong> {{ message }}
             </div>
         {% endfor %}
         {% block contentpage %}{% endblock %}
     </div>
     <!-- /page content -->
 {% endblock %}
+
+{#display: flex; flex-direction: column#}
