--- a/src/templates/admin/main.html.twig
+++ b/src/templates/admin/main.html.twig
@@ -2,12 +2,8 @@
 
 {% block contentpage %}
     <div>
-        <h1 style="text-align: center">
-            Calendrier des congés
-        </h1>
-        <div style="border-top: 1px solid #a1a1a1;" class="ln_solid"></div>
         <a style="background-color: {{ app.user.color }}; border-color: {{ app.user.color }}" class="btn btn-primary" href="{{ path('app_salarie_modif_couleur',{"id":app.user.id}) }}">
-            <i class="fa fa-paint-brush"></i> Changer ma couleur !
+            <i class="fa fa-paint-brush"></i> Changer la couleur de mes congés
         </a>
         <div style="color: #0f0f0f; font-size: 15px" id="calendar-holder"></div>
     </div>
