--- a/src/templates/adminbase.html.twig
+++ b/src/templates/adminbase.html.twig
@@ -41,8 +41,7 @@
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
     <!-- FullCalendar -->
     <link href="{{ asset('vendors/fullcalendar5.8/lib/main.css') }}" rel="stylesheet">
-{#    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.css">#}
-{#    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/list@4.1.0/main.min.css">#}
+
 {% endblock %}
 
 {% block bodyclass %} class="nav-md" {% endblock %}
@@ -112,9 +111,7 @@
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
     <!-- FullCalendar -->
     <script src="{{ asset('vendors/fullcalendar5.8/lib/main.js') }}"></script>
-{#    <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/interaction@4.1.0/main.min.js"></script>#}
-{#    <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.js"></script>#}
-{#    <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/list@4.1.0/main.min.js"></script>#}
+    <script src="{{ asset('vendors/fullcalendar5.8/lib/locales-all.js') }}"></script>
 
     <script>
         var dataminetables = $('.dataminetables').dataTable({
@@ -301,7 +298,7 @@
             let calendar = new FullCalendar.Calendar(calendarEl, {
                 locale: 'fr',
                 initialView: 'dayGridMonth',
-                aspectRatio: 2.5,
+                aspectRatio: 2.3,
                 displayEventTime : false,
                 showNonCurrentDates: false,
                 fixedWeekCount: false,
