--- a/src/templates/adminbase.html.twig
+++ b/src/templates/adminbase.html.twig
@@ -31,8 +31,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <!-- include summernote css/js -->
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
-    <!-- FullCalendar -->
-    <link href="{{ asset('vendors/fullcalendar5.8/lib/main.css') }}" rel="stylesheet">
+{#    <!-- FullCalendar -->#}
+{#    <link href="{{ asset('vendors/fullcalendar5.8/lib/main.css') }}" rel="stylesheet">#}
 
 {% endblock %}
 
@@ -72,9 +72,9 @@
     <script src="{{ asset('vendors/jquery.tagsinput/src/jquery.tagsinput.js') }}"></script>
     <!-- Summernote -->
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-    <!-- FullCalendar -->
-    <script src="{{ asset('vendors/fullcalendar5.8/lib/main.js') }}"></script>
-    <script src="{{ asset('vendors/fullcalendar5.8/lib/locales-all.js') }}"></script>
+{#    <!-- FullCalendar -->#}
+{#    <script src="{{ asset('vendors/fullcalendar5.8/lib/main.js') }}"></script>#}
+{#    <script src="{{ asset('vendors/fullcalendar5.8/lib/locales-all.js') }}"></script>#}
 
     <script>
         var dataminetables = $('.dataminetables').dataTable({
@@ -226,6 +226,7 @@
                 $('label[for="conges_form_motif"]').hide();
             }
         });
+
     </script>
     <!-- beautifull DateType fields errors  -->
     <script>
@@ -245,49 +246,6 @@
                 $('[data-id="conges_form_datefin_year"]').css("border", "solid #b94a48 1px");
                 $('.dropdown').not('.is-invalid').css("margin-left", "1px")
             }
-        });
-    </script>
-    <!-- FullCalendar  -->
-    <script>
-        $(document).ready(function () {
-            let calendarEl = document.getElementById('calendar-holder');
-            let calendar = new FullCalendar.Calendar(calendarEl, {
-                locale: 'fr',
-                initialView: 'dayGridMonth',
-                aspectRatio: 2.3,
-                displayEventTime : false,
-                showNonCurrentDates: false,
-                fixedWeekCount: false,
-                weekends: true,
-                firstDay: 1,
-                dayHeaderFormat: { weekday: 'long' },
-                eventSources: [
-                    {
-                        url: "/fc-load-events",
-                        method: "POST",
-                        extraParams: {
-                            filters: JSON.stringify({})
-                        },
-                        failure: () => {
-                            alert("Erreur lors du chargement du calendrier");
-                        },
-                    },
-                ],
-                headerToolbar: {
-                    start: 'prev,next today prevYear,nextYear',
-                    center: 'title',
-                    end: 'dayGridMonth,listMonth',
-                },
-                buttonText: {
-                    today:    "Aujourd'hui",
-                    month:    'Mois',
-                    week:     'Semaine',
-                    day:      'Jour',
-                    list:     'Liste'
-                },
-                timeZone: 'UTC',
-            });
-            calendar.render();
         });
     </script>
 {% endblock %}
