suppression de packages symfony non utilisés +modifs mineures de style du calendrier

--- a/src/templates/salarie/salarie.html.twig
+++ b/src/templates/salarie/salarie.html.twig
@@ -59,8 +59,10 @@
                                                     Responsable RH,
                                                 {% elseif value == 'ROLE_RESPONSABLE_SERVICE' %}
                                                     Responsable de service,
-                                                {% else %}
+                                                {% elseif value == 'ROLE_SALARIE' %}
                                                     Salarié
+                                                {% else %}
+
                                                 {% endif %}
                                             {% endfor %}
                                         </td>
