changement du nom du site +modifs mineures de style

--- a/src/templates/admin/bars.html.twig
+++ b/src/templates/admin/bars.html.twig
@@ -2,8 +2,8 @@
 {% block bars %}
     <div style="font-size: 15px" class="col-md-3 left_col menu_fixed">
         <div class="left_col scroll-view">
-            <div class="navbar nav_title" style="border: 0;">
-                <a href="{{ path('app_home') }}" class="site_title"> <img style="width: 36%" src="{{ asset('build/images/Logo-delko.png') }}" alt="logo delko"> <span>RH Delko</span></a>
+            <div class="navbar nav_title">
+                <a style="display: flex; padding: 0" href="{{ path('app_home') }}" class="site_title"> <img style="margin: 0 3px 0 3px;" src="{{ asset('build/images/Logo-delko.png') }}" alt="logo delko"> Delko Congés </a>
             </div>
 
             <div class="clearfix"></div>
