--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>{% block title %}RH Delko{% endblock %}</title>
+        <title>{% block title %}Delko Congés{% endblock %}</title>
         {% block metas %}
             <meta charset="UTF-8">
         {% endblock %}
