--- a/src/templates/security/login.html.twig
+++ b/src/templates/security/login.html.twig
@@ -60,7 +60,7 @@
 			<div class="animate form login_form">
 				<section class="login_content">
 					<form method="post">
-						<h1>Delko RH</h1>
+						<h1>Delko Congés</h1>
 						<div>
 							<label style="font-size: 1rem" for="inputText"> E-mail </label> <input type="text" value="{{ last_username }}" name="email" id="inputText" class="form-control" required autofocus>
 						</div>
@@ -74,22 +74,17 @@
 						</div>
 						<div>
 							<button class="btn btn-success submit" href="index.html">Se connecter</button>
+							{% if error %}
+								<div style="border-top: 1px solid #D8D8D8; margin: 10px 0 10px 0;" class="ln_solid"></div>
+								<div style="margin: 0; font-size: 15px" class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security', 'fr') }}</div>
+							{% endif %}
 {#							<a class="reset_pass" href="{{path('app_forgot_password_request')}}">Mot de passe perdu ?</a>#}
 						</div>
 						<div class="separator">
-							{% if error %}
-								<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security', 'fr') }}</div>
-							{% endif %}
 							<div class="clearfix"></div>
 							<br/>
-
 							<div>
 								<img style="width: 36%" src="{{ asset('build/images/logo-delko.png') }}" alt="logo delko">
-{#								<p>#}
-{#									©{{ "now"|date("Y") }}#}
-{#									tous droits réservés#}
-{#									<a target="_blank" href="https://www.delko.fr/"> delko.fr </a>#}
-{#								</p>#}
 							</div>
 						</div>
 						<div class="clearfix"></div>
